--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,212 @@
 body {
+    font-family: 'Roboto', sans-serif;
+}
+
+/* Containers */
+
+.container-wrapper {}
+
+.container-wrapper--red {
+    background-color: #f05f40;
+    color: white;
+}
+
+.alert-container {}
+
+.callout-container {
+    height: 100vh;
+
+    background: url('../images/whiskey-background.jpg') no-repeat bottom right fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: relative;
+}
+
+.opaque-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.content-container {
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+
+/* Navbar */
+
+.navalert-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.navbar {
+    margin-bottom: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, .25);
+    border: 0;
+}
+
+.navbar .navbar-toggler {
+    border: 0;
+}
+
+.navbar .navbar-brand {
+    font-weight: bold;
+}
+
+.navbar .navbar-nav a {
+    font-weight: bold;
+}
+
+
+/* Jumbotron */
+
+.jumbotron {
+    background-color: transparent;
+}
+
+.jumbotron h1 {
+    color: white;
+    font-weight: bold;
+    margin-bottom: 30px;
+    color: white;
+}
+
+.jumbotron .lead {
+    color: #a7a7a7;
+    margin: 25px 0;
+}
+
+.jumbotron small {
+    font-size: 60%;
+    font-style: italic;
+    color: #d0d0d0;
+}
+
+/* Block dividers */
+
+.block-divider {
+    width: 75px;
+    height: 5px;
+    border: 0;
+    background-color: #444;
+}
+
+.block-divider--orange {
+    background-color: #f05f40;
+}
+
+.block-divider--white {
+    background-color: white;
+}
+
+.block-divider--short {
+    width: 35px;
+}
+
+/* Buttons */
+
+.btn--cta {
+    font-weight: bold;
+    border-radius: 23px;
+    width: 160px;
+}
+
+.btn--red {
+    color: white;
+    background-color: #f05f40;
+    border-color: #f05f40;
+}
+
+.btn--red:hover,
+.btn--red:active,
+.btn--red:focus,
+.btn--red:active:focus {
+    background-color: #df4929;
+    border-color: #df4929;
+    color: white;
+}
+
+/* Alert */
+
+.alert-container .col-12 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.site-wide-alert {
+    color: #544600;
+    background-color: #eec802;
+    border-color: #eec802;
+    padding: 5px 15px;
+    margin-bottom: 0;
+    border: 1px solid transparent;
+    border-radius: 0;
+}
+
+/* Page Headers */
+
+.page-header {
+    margin-bottom: 0;
+    border-bottom: 0;
+    text-align: center;
+}
+
+.page-header h2 {
+    margin-top: 0;
+}
+
+/* Quotes */
+
+.quotes .page-header {
+    margin-bottom: 25px;
+}
+
+/* Features */
+
+.feature {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.feature i {
+    margin-bottom: 20px;
+    font-size: 45px;
+    line-height: 45px;
+}
+
+.feature .btn {
+    background-color: white;
+    border-color: white;
+    border-radius: 15px;
+    min-width: 100px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #f05f40;
+}
+
+
+
+
+
+/*
+
+body {
    font-family: 'Roboto', sans-serif;
 }
 
@@ -7,15 +215,15 @@ body {
 .callout-container{
     height:100vh;
 
-    background: url(../images/whiskey-background.jpg) no-repeat bottom right fixed; 
+    background: url("../images/whiskey-background.jpg") no-repeat bottom right fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover; /* add this backgrounf url from css-tricks.com. next thing you do is comment out the alert container. next video we will style it.  */
+  background-size: cover; / * add this background  url from css-tricks.com. next thing you do is comment out the alert container. next video we will style it.  * /
 
   display: flex;
   align-items: center;
-  justify-content: center; /* start to style the text this */
+  justify-content: center; /* start to style the text this * /
 
   position: relative;
 }
@@ -26,7 +234,7 @@ body {
     left: 0;
     height: 100%;
     right: 100%;
-    background-color: rgba(0,0,0.5);
+    background-color: rgba(0,0,0,0.5);
 
 }
 
@@ -36,7 +244,7 @@ body {
 .features-container{}
 
 
-/* Block devider */
+/* Block devider * /
 
 .block-devider {
     width: 75px;
@@ -52,11 +260,10 @@ body {
     width: 35px;
 }
 
-
-/* Jumbotron */
+/ * Jumbotron * /
 
 .jumbotron {
-    background-color: transparent; /* It will overide the white box that is currently there .*/
+    background-color: transparent; /* It will overide the white box that is currently there .* /
 }
 .jumbotron-header {
     color: white;
@@ -69,8 +276,49 @@ body {
     color: #a7a7a7;
 }
 
-.jumbotron-small {
+.jumbotron small {
     font-size: 60%;
     font-style: italic;
-    color: #d0d0d0; /* after this add horizontal rule.*/
+    color: #d0d0d0; /* after this add horizontal rule.* /
 }
+
+/ * Buttons * /
+
+.btn--cta { /* cta means call for action * /
+    font-weight: bold;
+    border-radius: 23px;
+    width: 160px;
+}
+
+.btn--red {
+    color:white;
+    background-color: #f05f40;
+    border-color: #f05f40;
+}
+
+.btn--red:hover,
+.btn--red:active,
+.btn--red:focus,
+.btn--red:active:focus {
+    background-color: #df4929;
+    border-color: #df4929;
+    color: white;
+}
+
+*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
